--- a/css/styles.css
+++ b/css/styles.css
@@ -164,12 +164,12 @@ a:visited {
 }
 
 #michelle-olivieri-cover {
- background-image: url("https://learn-verified.s3.amazonaws.com/diane-vu-cover.jpg");
+ background-image: url("https://i.imgur.com/WA4kj2p.jpg");
 }
 
 #michelle-olivieri-card {
- background-image: url("https://learn-verified.s3.amazonaws.com/diane-vu.jpg");
-}
+  background-image: url("https://i.imgur.com/8p3exvA.jpg");
+ }
 
 .view-profile-div {
   position: absolute;
