--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ a:visited {
 }
 
 #michelle-olivieri-card {
-  background-image: url("https://i.imgur.com/8p3exvA.jpg");
+  background-image: url("https://i.imgur.com/jnXF29v.jpg");
  }
 
 .view-profile-div {
