--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,14 @@ a:visited {
  background-image: url("https://learn-verified.s3.amazonaws.com/diane-vu.jpg");
 }
 
+#michelle-olivieri-cover {
+ background-image: url("https://i.imgur.com/WA4kj2p.jpg");
+}
+
+#michelle-olivieri-card {
+  background-image: url("https://i.imgur.com/n1a7x2T.jpg");
+ }
+
 .view-profile-div {
   position: absolute;
   bottom: 0;
